tests/invalid/parameter_pack_non_trailing.wio
fn Bad<Args...>(args: Args..., tail: i32) -> i32 {
    return tail;
}
